# Smart

./: .gitignore  README.md  WORK_LOG.md  docker-compose.yml
apps/backend/: pyproject.toml  requirements.txt
apps/backend/domain/: chunker.py  embedder.py  pdf_parser.py
apps/backend/tests/: chunker_test.py  parser_test.py  pipeline_test.py
apps/backend/tests/fixtures/: generate_multipage.py
docs/: ARCHITECTURE.md  FLOW.md
docs/adr/: 001-use-background-tasks-for-ingestion.md  002-use-pgvector.md
