[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-backend"
version = "0.1.0"
description = "Enterprise Knowledge Retrieval System for private PDFs"
requires-python = ">=3.9"
license = {text = "MIT"}

# Core dependencies from requirements.txt
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "psycopg",
    "python-dotenv",
    "google-genai",
    "requests",
    "redis",
    "celery",
    "pypdf",
    "sentence-transformers",
]

[project.optional-dependencies]
# Test dependencies from requirements-test.txt
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
]

# Lab/experimental dependencies from requirements-lab.txt
lab = [
    "transformers",
    "torch",
    "numpy",
]

# All optional dependencies combined
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
    "transformers",
    "torch",
    "numpy",
]

[tool.setuptools]
packages = ["app", "domain"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
